--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,4 +15,8 @@
    "files.autoSave": "off",
    "workbench.colorTheme": "Visual Studio Dark",
    "terminal.integrated.gpuAcceleration": "canvas",
+   "cSpell.words": [
+      "groupage",
+      "Llantrisant"
+   ],
 }
